--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <title>BabyGUI</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/logo-transparent.png" type="image/jpg">
-    <meta name="description" content="babyshark description">
+    <meta name="description" content="Baby $BGUI is the son of $GUI, Embodying the same community characteristic’s we’ve came to know and love.">
     <meta name="theme-color" content="#3AE8FF">
     <link rel="icon" href="images/logo-transparent.png">
-    <meta property="og:image" content="babyshark description" />
-    <meta name="msapplication-TileImage" content="babyshark description" />
+    <meta property="og:image" content="Baby $BGUI is the son of $GUI, Embodying the same community characteristic’s we’ve came to know and love." />
+    <meta name="msapplication-TileImage" content="Baby $BGUI is the son of $GUI, Embodying the same community characteristic’s we’ve came to know and love." />
     <link href="images/logo-transparent.png" rel="icon" />
     <link href="images/logo-transparent.png" rel="apple-touch-icon" />
     <link rel="icon" href="images/logo-transparent.png" sizes="32x32" />
     <link rel="icon" href="images/logo-transparent.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="images/logo-transparent.png" />
     <link rel="icon" href="images/logo-transparent.png" type="image/x-icon" />
-    <meta name="keywords" content="babyshark description">
-    <meta name="description" content="babyshark description">
+    <meta name="keywords" content="Baby $BGUI is the son of $GUI, Embodying the same community characteristic’s we’ve came to know and love.">
+    <meta name="description" content="Baby $BGUI is the son of $GUI, Embodying the same community characteristic’s we’ve came to know and love.">
 </head>
 
 <body>
